# VideoClipper

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/wzjing/videoclipper/: ExampleInstrumentedTest.java
app/src/libs/ffmpeg/include/libavutil/: ffversion.h  timestamp.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  native-lib.h
app/src/main/java/com/wzjing/videoclipper/: MainActivity.java
app/src/main/res/animator/: raise.xml
app/src/main/res/drawable/: rect.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-v21/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/wzjing/videoclipper/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
